total results html added

--- a/droppy_output/output.html
+++ b/droppy_output/output.html
@@ -265,6 +265,42 @@
     </tr>
   </tbody>
 </table>
+<h3 class="table-header table-header--expanded"><button class="header-button">Results</button></h3><table class="table--expanded">
+  <thead>
+    <tr>
+      <th></th>
+      <th>name</th>
+      <th>count</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>sinks_sources_count</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>deprecated_features_count</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>variables_count</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>functions_count</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>constants_count</td>
+      <td>1</td>
+    </tr>
+  </tbody>
+</table>
 <h3 class="table-header table-header--expanded"><button class="header-button">fuzzer</button></h3><table class="table--expanded">
   <thead>
     <tr>
