--- a/droppy_output/output.html
+++ b/droppy_output/output.html
@@ -163,6 +163,51 @@
       <td>0</td>
       <td>1</td>
     </tr>
+    <tr>
+      <th>2</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>4</td>
+      <td>2</td>
+      <td>2</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>testingApp/customer/user.js</td>
+      <td>4</td>
+      <td>3</td>
+      <td>2</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>8</td>
+      <td>2</td>
+      <td>3</td>
+      <td>3</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>4</td>
+      <td>2</td>
+      <td>2</td>
+      <td>1</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>testingApp/products/product.js</td>
+      <td>6</td>
+      <td>5</td>
+      <td>3</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
   </tbody>
 </table>
 <h3 class="table-header table-header--expanded"><button class="header-button">fuzzer_variables</button></h3><table class="table--expanded">
@@ -199,7 +244,7 @@
       <td>5</td>
       <td>var</td>
       <td>hello</td>
-      <td>"fuck off"</td>
+      <td>"this is an ecommerce site"</td>
     </tr>
     <tr>
       <th>3</th>
@@ -233,6 +278,214 @@
       <td>a</td>
       <td>x+3</td>
     </tr>
+    <tr>
+      <th>7</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>1</td>
+      <td>const</td>
+      <td>db</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>4</td>
+      <td>const</td>
+      <td>seller</td>
+      <td>db.create_seller</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>8</td>
+      <td>let</td>
+      <td>r</td>
+      <td>JSON.parse</td>
+    </tr>
+    <tr>
+      <th>10</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>14</td>
+      <td>let</td>
+      <td>details</td>
+      <td>db.seller</td>
+    </tr>
+    <tr>
+      <th>11</th>
+      <td>testingApp/customer/user.js</td>
+      <td>1</td>
+      <td>const</td>
+      <td>app</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>12</th>
+      <td>testingApp/customer/user.js</td>
+      <td>2</td>
+      <td>const</td>
+      <td>db</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>13</th>
+      <td>testingApp/customer/user.js</td>
+      <td>10</td>
+      <td>var</td>
+      <td>results</td>
+      <td>db.find</td>
+    </tr>
+    <tr>
+      <th>14</th>
+      <td>testingApp/customer/user.js</td>
+      <td>25</td>
+      <td>const</td>
+      <td>results</td>
+      <td>db.find</td>
+    </tr>
+    <tr>
+      <th>15</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>1</td>
+      <td>const</td>
+      <td>db</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>16</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>4</td>
+      <td>let</td>
+      <td>token</td>
+      <td>get_user_token</td>
+    </tr>
+    <tr>
+      <th>17</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>7</td>
+      <td>const</td>
+      <td>buy_results</td>
+      <td>buy</td>
+    </tr>
+    <tr>
+      <th>18</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>9</td>
+      <td>let</td>
+      <td>bill</td>
+      <td>generate_bill</td>
+    </tr>
+    <tr>
+      <th>19</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>20</td>
+      <td>let</td>
+      <td>user_id</td>
+      <td>get_user_token</td>
+    </tr>
+    <tr>
+      <th>20</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>21</td>
+      <td>let</td>
+      <td>results_remove_products</td>
+      <td>db.remove_products</td>
+    </tr>
+    <tr>
+      <th>21</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>36</td>
+      <td>let</td>
+      <td>user_id</td>
+      <td>get_user_token</td>
+    </tr>
+    <tr>
+      <th>22</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>37</td>
+      <td>let</td>
+      <td>results_add_products</td>
+      <td>db.add_products</td>
+    </tr>
+    <tr>
+      <th>23</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>1</td>
+      <td>const</td>
+      <td>db</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>24</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>5</td>
+      <td>const</td>
+      <td>n</td>
+      <td>db.findall</td>
+    </tr>
+    <tr>
+      <th>25</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>7</td>
+      <td>let</td>
+      <td>note</td>
+      <td>[]</td>
+    </tr>
+    <tr>
+      <th>26</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>8</td>
+      <td>let</td>
+      <td>y</td>
+      <td>getYear</td>
+    </tr>
+    <tr>
+      <th>27</th>
+      <td>testingApp/products/product.js</td>
+      <td>1</td>
+      <td>const</td>
+      <td>db</td>
+      <td>require</td>
+    </tr>
+    <tr>
+      <th>28</th>
+      <td>testingApp/products/product.js</td>
+      <td>4</td>
+      <td>const</td>
+      <td>p</td>
+      <td>db.create_product</td>
+    </tr>
+    <tr>
+      <th>29</th>
+      <td>testingApp/products/product.js</td>
+      <td>15</td>
+      <td>const</td>
+      <td>product</td>
+      <td>db.find_product</td>
+    </tr>
+    <tr>
+      <th>30</th>
+      <td>testingApp/products/product.js</td>
+      <td>20</td>
+      <td>const</td>
+      <td>results</td>
+      <td>db.change</td>
+    </tr>
+    <tr>
+      <th>31</th>
+      <td>testingApp/products/product.js</td>
+      <td>29</td>
+      <td>let</td>
+      <td>block</td>
+      <td>db.find_product</td>
+    </tr>
+    <tr>
+      <th>32</th>
+      <td>testingApp/products/product.js</td>
+      <td>31</td>
+      <td>const</td>
+      <td>results</td>
+      <td>db.remove_product</td>
+    </tr>
   </tbody>
 </table>
 <h3 class="table-header table-header--expanded"><button class="header-button">controlflow</button></h3><table class="table--expanded">
@@ -263,6 +516,30 @@
       <td>static evaluation of conditions</td>
       <td>{'condition': '1+3&gt;=5', 'parsed result': False, 'line no': 2}</td>
     </tr>
+    <tr>
+      <th>2</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>29</td>
+      <td>Conditional Statements</td>
+      <td>static evaluation of conditions</td>
+      <td>{'condition': 'true', 'parsed result': 1, 'line no': 29}</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>45</td>
+      <td>Conditional Statements</td>
+      <td>static evaluation of conditions</td>
+      <td>{'condition': 'true', 'parsed result': 1, 'line no': 45}</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>14</td>
+      <td>Function</td>
+      <td>dead code after return</td>
+      <td>{'line no': 14, 'column no': 14, 'extra statements': 'if ( ! note ) { \nreturn "Failed to send notification" \n'}</td>
+    </tr>
   </tbody>
 </table>
 <h3 class="table-header table-header--expanded"><button class="header-button">Results</button></h3><table class="table--expanded">
@@ -277,27 +554,27 @@
     <tr>
       <th>0</th>
       <td>sinks_sources_count</td>
-      <td>2</td>
+      <td>3</td>
     </tr>
     <tr>
       <th>1</th>
       <td>deprecated_features_count</td>
-      <td>1</td>
+      <td>3</td>
     </tr>
     <tr>
       <th>2</th>
       <td>variables_count</td>
-      <td>8</td>
+      <td>34</td>
     </tr>
     <tr>
       <th>3</th>
       <td>functions_count</td>
-      <td>3</td>
+      <td>15</td>
     </tr>
     <tr>
       <th>4</th>
       <td>constants_count</td>
-      <td>1</td>
+      <td>15</td>
     </tr>
   </tbody>
 </table>
@@ -321,27 +598,55 @@
     </tr>
     <tr>
       <th>1</th>
-      <td>testingApp/app.js</td>
-      <td>8</td>
-      <td>log statement present</td>
-      <td>"hello everyone"</td>
+      <td>testingApp/customer/cart.js</td>
+      <td>6</td>
+      <td>Comments present</td>
+      <td>// buy with user token and return bill</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>testingApp/app.js</td>
-      <td>13</td>
-      <td>log statement present</td>
-      <td>"hurrah !"</td>
+      <td>testingApp/customer/cart.js</td>
+      <td>27</td>
+      <td>Comments present</td>
+      <td>//product is removed from database</td>
     </tr>
     <tr>
       <th>3</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>43</td>
+      <td>Comments present</td>
+      <td>//product is removed from database</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>24</td>
+      <td>Comments present</td>
+      <td>//iterating through notification list to cancel for some users</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>testingApp/app.js</td>
+      <td>8</td>
+      <td>log statement present</td>
+      <td>"debugging comment"</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>testingApp/app.js</td>
+      <td>13</td>
+      <td>log statement present</td>
+      <td>"foo function"</td>
+    </tr>
+    <tr>
+      <th>7</th>
       <td>testingApp/app.js</td>
       <td>17</td>
       <td>log statement present</td>
       <td>h</td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>8</th>
       <td>testingApp/test.js</td>
       <td>3</td>
       <td>log statement present</td>
@@ -371,6 +676,36 @@
       <td>1</td>
       <td>0</td>
     </tr>
+    <tr>
+      <th>2</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>1</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>testingApp/customer/user.js</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>0</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>testingApp/products/product.js</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
   </tbody>
 </table>
 <h3 class="table-header table-header--expanded"><button class="header-button">scanner_deprecated</button></h3><table class="table--expanded">
@@ -390,6 +725,20 @@
       <td>16</td>
       <td>in</td>
       <td>{'details': 'https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Deprecated_and_obsolete_features'}</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>8</td>
+      <td>getYear</td>
+      <td>{'details': 'Reference : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Deprecated_and_obsolete_features'}</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>23</td>
+      <td>unwatch</td>
+      <td>{'details': 'Reference : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Deprecated_and_obsolete_features'}</td>
     </tr>
   </tbody>
 </table>
@@ -418,6 +767,13 @@
       <td>sink</td>
       <td>document.write</td>
     </tr>
+    <tr>
+      <th>2</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>8</td>
+      <td>sink</td>
+      <td>JSON.parse</td>
+    </tr>
   </tbody>
 </table>
 <h3 class="table-header table-header--expanded"><button class="header-button">fuzzer_func</button></h3><table class="table--expanded">
@@ -438,7 +794,7 @@
       <td>1</td>
       <td>newworld</td>
       <td>['a', 'b']</td>
-      <td>3</td>
+      <td>2</td>
     </tr>
     <tr>
       <th>1</th>
@@ -454,6 +810,102 @@
       <td>1</td>
       <td>sayHello</td>
       <td>['x']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>3</td>
+      <td>become_seller</td>
+      <td>['user_id']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>testingApp/sellers/seller.js</td>
+      <td>13</td>
+      <td>is_seller</td>
+      <td>['id']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>testingApp/customer/user.js</td>
+      <td>4</td>
+      <td>login</td>
+      <td>['username', 'password']</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>testingApp/customer/user.js</td>
+      <td>20</td>
+      <td>signup</td>
+      <td>['email', 'username', 'password']</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>3</td>
+      <td>buy</td>
+      <td>['cart_id']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>19</td>
+      <td>remove_item_from_cart</td>
+      <td>['product_id']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>testingApp/customer/cart.js</td>
+      <td>34</td>
+      <td>add_item_to_cart</td>
+      <td>['product_id']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>10</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>3</td>
+      <td>send_notification</td>
+      <td>['details']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>11</th>
+      <td>testingApp/products/send_notification.js</td>
+      <td>21</td>
+      <td>notification_cancel</td>
+      <td>['notify']</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <th>12</th>
+      <td>testingApp/products/product.js</td>
+      <td>3</td>
+      <td>create_product</td>
+      <td>['product_name', 'type', 'price']</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <th>13</th>
+      <td>testingApp/products/product.js</td>
+      <td>13</td>
+      <td>reduce_product_price</td>
+      <td>['product_name', 'price']</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>14</th>
+      <td>testingApp/products/product.js</td>
+      <td>28</td>
+      <td>block_product</td>
+      <td>['product_name']</td>
       <td>1</td>
     </tr>
   </tbody>
